# react-native-chunks

./: .eslintrc.js  .gitignore  CONTRIBUTING.md  README.md  package.json  react-native-chunks.podspec  react-native.config.js  tsconfig.json
android/: CMakeLists.txt  ChunksModule.cpp  build.gradle  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: AndroidChunkLoader.cpp  AndroidChunkLoader.h
android/src/main/java/com/chunks/: ChunksModule.kt  ChunksPackage.kt
android/src/main/java/com/ivku/chunks/: AndroidChunkLoader.kt  ChunksModule.kt  ChunksPackage.kt
codepush-example/: .gitignore  app.json  babel.config.js  bootstrap.ts  chunks.config.js  index.js  metro.config.js  package.json  root.ts
codepush-example/android/: settings.gradle
codepush-example/ios/: Podfile
codepush-example/src/: App.tsx  CrashButton.tsx
cpp/: ChunkLoader.cpp  ChunkLoader.h
docs/: codepush-example.md  under-the-hood.md
example/: .gitignore  app.json  chunks.config.js  index.js  node_modules_chunk.ts  package.json  root.ts
example/android/: settings.gradle
example/ios/: .xcode.env  File.swift  Podfile
example/src/: App.tsx  ReanimatedButton.tsx
ios/: Chunks.h  Chunks.mm  Chunks.swift
src/: applyStackParser.ts  chunks.ts  index.tsx
src/cli/: calculateChangedDependencies.js  chunkBundle.js  chunks.js  commonBundleCommandOptions.js  composeSourceMaps.js  getChunksConfig.js  getDependencies.js  hermesBundle.js  index.js  logger.js  metroBundle.js  moduleId.js  utils.js
src/metro-config/: MetroSerializer.js  createModuleIdFactory.js  index.js  (+1 more)
(+25 files in other folders)
